提交相关的测试

--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@
 				<h4>使用 v-model</h4>
 				<button type="button" id="btn">componet-vmodel.html</button>
 			</div>
+			<div>
+				<h4>开发一个标签页组件</h4>
+				<button type="button" id="btn">componet-tabs.html</button>
+			</div>
+			<div>
+				<h4>自定义指令</h4>
+				<button type="button" id="btn">directive-my.html</button>
+			</div>
 		</div>
 		<script type="text/javascript">
 			document.body.addEventListener("tap", function() {
