--- a/test.html
+++ b/test.html
@@ -22,6 +22,9 @@
 		<div style="height: 20px;">
 			
 		</div>
+		<div  v-test:msg.a.b="message">
+			666
+		</div>
 		<componet-test></componet-test>
 		<script type="text/x-template" id="componet-test-template">
 			<div>
@@ -33,6 +36,7 @@
 	
 	<script type="text/javascript">
 		
+		//自定义组件
 		Vue.component('componet-test',{
 			template:"#componet-test-template",
 			methods:{
@@ -43,9 +47,20 @@
 			
 		})
 		
+		//自定义指令 
+		Vue.directive("test",{
+			
+			bind:function(el,binding,vnode){
+				
+			}
+			
+		})
+		
+		
 		var vm = new Vue({
 			el:"#app",
 			data:{
+				message:"some text"
 			},
 			mounted:function(){
 				
